--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Narah</string>
+    <string name="name">Name</string>
+    <string name="personal_data">personal_data</string>
+
 </resources>
